fix homepage behaviour now it checks if the room exists before creating it, fix typing event now it's a keyup event and skips if the message only contains whitespace, fix socket undefined user now it check the user for every event

--- a/public/style.css
+++ b/public/style.css
@@ -261,6 +261,36 @@ body, html, #root, #App {
     width: 100%;
     max-height: 500px;
     overflow: auto;
+    scrollbar-color: rgb(0, 75, 75);
+    scrollbar-track-color: rgba(0, 92, 92, 0.3);
+    scrollbar-width: 5px;
+}
+
+.convo::-webkit-scrollbar {
+    width: 5px;
+    transition: 200ms;
+}
+
+.convo::-webkit-scrollbar:hover {
+    width: 10px;
+    transition: 200ms;
+}
+
+.convo::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+.convo::-webkit-scrollbar-track:hover {
+    background-color: rgba(0, 92, 92, 0.3);
+}
+
+.convo::-webkit-scrollbar-thumb {    
+    background: rgb(0, 75, 75);
+    border-radius: 10px;
+}
+
+.convo::-webkit-scrollbar-button {
+    display: none;
 }
 
 .convo .message-container {
@@ -305,6 +335,7 @@ body, html, #root, #App {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: white;
     margin-top: 10px;
+    word-wrap: break-word;
 }
 
 .convo .message-container .message .credent .user {
